k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-service
  namespace: devops
spec:
  type: LoadBalancer
  selector:
    app: react-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
